--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ header h1 a{display: block;width: 100%;height: 100%;}
 
 .container.container-padding{padding-bottom: 80px;}
 
-.container-abuot .row .col-md-8 h1{position: absolute;z-index: 100;font-size:188px;font-weight: bold;line-height:170px;}
+.container-abuot .row .col-md-8 h1{color: red; position: absolute;z-index: 100;font-size:188px;font-weight: bold;line-height:170px;}
 
 @media screen and (max-width:992px) { /*화면크기가 768 이하인 경우*/
     .container-abuot .row .col-md-8 h1{position:static;font-size: 80px;line-height: 90px;}
