--- a/css/style.css
+++ b/css/style.css
@@ -57,17 +57,32 @@ header .container{}
 header h1 {
     width: 80px;
     height: 80px;
-    background-color: #fdc000;
     float: left 
 }
 
-header h1 a{display: block;width: 100%;height: 100%;}
+header h1 a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/logo.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
-.navbar-collapse{float: right;margin-top: 25px;}
+.navbar-collapse {
+    float: right;
+    margin-top: 25px;
+}
 
-.navbar-inverse .navbar-nav>li>a{color: #fff;margin-left: 30px;}
+.navbar-inverse .navbar-nav>li>a {
+    color: #fff;
+    margin-left: 30px;
+}
 
-.navbar-inverse{background-color:transparent;border: none;}
+.navbar-inverse {
+    background-color:transparent;
+    border: none;
+}
 
 /*모바일 메뉴*/
 @media screen and (max-width: 768px) {
@@ -111,90 +126,135 @@ header h1 a{display: block;width: 100%;height: 100%;}
     .navbar-toggle{border-radius:0;}
 }
     
+/*main*/
+.carousel-inner .content-hr{height: 100%;}
 
-
-
-
-
-
-.fill .content-hr{padding-top: 116px;}
-
-.fill .content-hr .container{padding:0px 18px;}
-
-.fill .content-hr .container div {
-    width: 431px;
-    position: absolute;
-    bottom: 48px;
-    z-index: 30
+.left_box {
+    float:left;
+    width: 55%;
+    padding: 125px 28px 0px;
+    height: 100%;
+    background-color: #f5f5f5
 }
 
-.fill .content-hr .container div h1 {
-    font-size: 80px;
+.left_box h1 {
+    font-size: 18px;
+    margin-top: 180px;
+    margin-bottom:40px;
+}
+
+.left_box h2 {
+    font-size:45px;
     font-weight: bold;
+    color:#222;
+    margin-bottom: 20px;
+}
+
+.left_box p {
+    font-size: 21px;
+    color: #9e9e9e;
+    margin-bottom: 70px;
+    font-weight: 300;
+}
+
+.left_box-2 p{margin-bottom: 20px;}
+
+.more_btn span {
+    background-image: url(../img/move.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    width:45px;
+    height: 100%;
+    display: inline-block;
+    float: right;
+    
+}
+
+.more_btn {
+    display: block;
+    width: 250px;
+    height: 50px;
+    border:1px solid #000;
+    font-size:18px;
+    font-weight: 500;
+    color: #222;
+    line-height: 48px;
+    padding:0px 18px;
+}
+
+.more_btn:hover {
+    background-color: #000;
     color: #fff;
-    margin-bottom: 42px;
+    transition: .3s;
+    text-decoration: none;
+}
+.more_btn:hover span{background-image: url(../img/move_w.svg);}
+
+
+
+.right_box {
+    float:right;
+    width: 45%;
+    height: 100%;
+    background-color: #000;
+    padding: 125px 66px 66px;
+    padding-right: 31px;
 }
 
-.fill .content-hr .container div p {
-    padding-right: 60px;
-    margin-bottom: 42px;
-    color: #fff;
-}
-
-.fill .content-hr .container a {
-    display:inline-block;
-    padding: 14px 35px;
-    background-color: #303030
-}
-
-.fill .content-hr .container .inpo-banner {
-    right:28px;
-    top:200px;
-    width: 50%;
+.right_box div {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    background-position: center;
+    background-size: cover;
 }
 
 @media screen and (max-width:992px) { /*화면크기가 768 이하인 경우*/
-    .fill .content-hr .container .inpo-banner {
-        top:160px;
-        width:100%;
-        z-index: 10;
-        right: 0;
+    .left_box,.right_box {
+        float:none;
+        width: 100%;
     }
+    
 }
 
 
-.fill .content-hr .container .inpo-banner ul li {
-    width:30%;
-    height:500px;
-    background-color: #faf;
-    float: left;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 
-.fill .content-hr .container .inpo-banner ul li:nth-child(1){background-position:center left;}
-.fill .content-hr .container .inpo-banner ul li:nth-child(2){margin-top: 78px;margin-left: 5%;margin-right: 5%;}
-.fill .content-hr .container .inpo-banner ul li:nth-child(3){background-position:center right;;}
 
 
 /*abuot*/
 
 .header-sub{padding-bottom: 60px;}
 
-.header-sub .navbar-inverse .navbar-nav>li>a{color: #303030;}
+.header-sub .navbar-inverse .navbar-nav>li>a {
+    color: #303030;
+}
 
 .container.container-padding{padding-bottom: 80px;}
 
-.container-abuot .row .col-md-8 h1{color: red; position: absolute;z-index: 100;font-size:188px;font-weight: bold;line-height:170px;}
+.container-abuot .row .col-md-8 h1 {
+    color:#303030;
+    position: absolute;
+    z-index: 100;
+    font-size:188px;
+    font-weight: bold;
+    line-height:170px;
+}
 
 @media screen and (max-width:992px) { /*화면크기가 768 이하인 경우*/
-    .container-abuot .row .col-md-8 h1{position:static;font-size: 80px;line-height: 90px;}
+    .container-abuot .row .col-md-8 h1 {
+        position:static;
+        font-size: 80px;
+        line-height: 90px;
+    }
 }
 
 
 
-.container-abuot .row .col-md-4{padding-top: 72px;padding-left: 190px;padding-right: 0;}
+.container-abuot .row .col-md-4 {
+    padding-top: 72px;
+    padding-left: 190px;
+    padding-right: 0;
+}
 
 @media screen and (max-width:992px) { /*화면크기가 768 이하인 경우*/
     .container-abuot .row .col-md-4{padding: 16px;}
@@ -204,7 +264,10 @@ header h1 a{display: block;width: 100%;height: 100%;}
 
 .container-abuot .row .col-md-4 ul li:first-child{margin-bottom:100px;}
 
-.container-abuot .row .col-md-4 ul li h2{font-size: 18px;margin-bottom: 10px;}
+.container-abuot .row .col-md-4 ul li h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
 
 .container-abuot .row .col-md-4 ul li p{margin-bottom: 0;}
 
@@ -228,10 +291,17 @@ header h1 a{display: block;width: 100%;height: 100%;}
 
 .container-abuot .row .col-md-8.col-md-offset-4{padding:80px 0 0;}
 
-.container-abuot .row .col-md-8.col-md-offset-4 p{font-size:40px;font-weight: bold;line-height:50px;}
+.container-abuot .row .col-md-8.col-md-offset-4 p {
+    font-size:40px;
+    font-weight: bold;
+    line-height:50px;
+}
 
 
-.skill-box h1{padding: 20px 0px 85px; border-top:4px solid #303030;}
+.skill-box h1 {
+    padding: 20px 0px 85px; 
+    border-top:4px solid #303030;
+}
 
 @media screen and (max-width:992px) { /*화면크기가 768 이하인 경우*/
     .skill-box h1{padding:20px 16px 85px;}
@@ -243,11 +313,24 @@ header h1 a{display: block;width: 100%;height: 100%;}
     .skill-box .col-md-3{margin-bottom: 60px;}
 }
 
-.skill-box .col-md-3 img{display: block; width: 84px;height: 84px;background-color: #000;;margin-bottom:40px;}
+.skill-box .col-md-3 img {
+    display: block; 
+    width: 84px;
+    height: 84px;
+    background-color: #000;
+    margin-bottom:40px;
+}
 
-.skill-box .col-md-3 h2{font-size: 25px;margin-bottom:15px;}
+.skill-box .col-md-3 h2 {
+    font-size: 25px;
+    margin-bottom:15px;
+}
 
-.skill-box .col-md-3 p{font-size: 15px;line-height: 20px;padding-right: 80px;}
+.skill-box .col-md-3 p {
+    font-size: 15px;
+    line-height: 20px;
+    padding-right: 80px;
+}
 
 
 
