--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,18 @@ header h1 a {
         float:none;
         width: 100%;
     }
+    .left_box{height: 60%;}
     
+    .right_box {
+        height: 40%;
+        padding: 20px
+    }
+    
+    .left_box h1{margin-top:8px;}
+    
+    .left_box h2{font-size:30px;}
+    
+    .left_box p{margin-bottom: 20px;}
 }
 
 
