--- a/css/normalize-vdas.css
+++ b/css/normalize-vdas.css
@@ -36,13 +36,13 @@ div,h1,h2,h3 {
 }
 
 h1 {
-    font-family: Montserrat,sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-transform:uppercase;
     color: #303030;
 }
 
 h2,h3,h4 {
-    font-family: Montserrat,sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: #303030;
 }
 
