--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,12 @@ width:auto;
 .grid_3{width: 1200px;height: 100%;margin:0 auto}
 div,a{background-repeat: no-repeat;}
 
+@media screen and (max-width:768px) { /*화면크기가 768 이하인 경우*/
+    .grid,.grid_2,.grid_3 {
+        padding: 68px 14px;
+        width: 100%;
+    }
+}
 
 
 
@@ -56,6 +62,8 @@ header {
     width: 100%;
     padding: 15px 0px;
 }
+
+.index-header{padding:15px}
 
 header .container{}
 
@@ -102,6 +110,7 @@ header h1 a {
 
 /*모바일 메뉴*/
 @media screen and (max-width: 768px) {
+    .index-header{padding:15px 0px}
     .side-collapse-container{
         width:100%;
         position:relative;
@@ -112,7 +121,6 @@ header h1 a {
         left:200px;
     }
     .side-collapse {
-        top:110px;
         bottom:0;
         right: 0;
         width:200px;
@@ -130,16 +138,25 @@ header h1 a {
         margin-top: 25px;
     }
     
-    .navbar-inverse .navbar-toggle{background-color: #303030;}
-    
     .navbar-inverse .side-collapse{background-color: #303030;}
+    
     .navbar-inverse .navbar-toggle{border-color:transparent;}
     
-    .side-collapse{width: 100%;}
+    .side-collapse{width: 100%;height: 100%;}
     
     .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form{border: none; width: 100%;}
     
     .navbar-toggle{border-radius:0;}
+    
+   .navbar-inverse .navbar-toggle .icon-bar{
+       height: 4px;
+       margin-bottom: 6px;
+       background-color: #303030;
+    }
+    
+    .navbar-inverse .navbar-nav>li>a{margin-bottom: 20px;color:#fff;}
+    
+    .container-width .header-sub .navbar-inverse .navbar-nav>li>a{color: #fff;}
 }
     
 /*main*/
@@ -163,6 +180,7 @@ header h1 a {
 .text_box h2 {
     font-size: 18px;
     margin-bottom: 36px;
+    font-weight: 600;
 }
 
 .text_box p {
@@ -254,6 +272,47 @@ footer .grid p {
     margin: 0 auto;
 }
 
+@media screen and (max-width:768px) { /*화면크기가 768 이하인 경우*/
+    .text_box h1 {
+        font-size: 46px;
+        font-weight: 900;
+            margin-bottom: 32px;
+    }
+    .text_box h2{margin-bottom: 20px;}
+    
+    .main .text_box p{margin-bottom: 8px;}
+    
+    .main_3 .text_box {
+        padding-left: 0;
+        padding-top: 20%;
+    }
+    
+    .main_3{background-size: 100%;}
+    
+    footer .grid {
+        padding: 3px;
+        text-align: center;
+    }
+    
+    footer .grid h1 {
+        float: none;
+        margin: 0 auto;
+    }
+    
+    footer .grid h1 a {
+        background-position: center;
+    }
+    
+    footer .grid p {
+        float: none; 
+        width: 100%; 
+        text-align: center;
+        margin-left: 0;
+        margin-top: 4px;
+    }
+}
+
+
 /*abuot*/
 .navbar-nav>li>a{text-transform: uppercase;}
 
@@ -263,9 +322,7 @@ footer .grid p {
     color: #303030;
 }
 
-@media screen and (max-width:768px) { /*화면크기가 768 이하인 경우*/
 
-}
 
 
 .container.container-padding{padding-bottom: 80px;}
