--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ footer .grid p {
 .content_first {
     width: 100%;
     height: 388px;
-    background-color: #662cbc;
+    background-color: #4c3682;
     text-align: center;
     position:relative;
 }
